; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/deadfs/extr_dead_vnops.c_dead_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/deadfs/extr_dead_vnops.c_dead_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vop_poll_args = type { i32 }

@POLLSTANDARD = common dso_local global i32 0, align 4
@POLLNVAL = common dso_local global i32 0, align 4
@POLLHUP = common dso_local global i32 0, align 4
@POLLIN = common dso_local global i32 0, align 4
@POLLRDNORM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dead_poll(%struct.vop_poll_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vop_poll_args*, align 8
  store %struct.vop_poll_args* %0, %struct.vop_poll_args** %3, align 8
  %4 = load %struct.vop_poll_args*, %struct.vop_poll_args** %3, align 8
  %5 = getelementptr inbounds %struct.vop_poll_args, %struct.vop_poll_args* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @POLLSTANDARD, align 4
  %8 = xor i32 %7, -1
  %9 = and i32 %6, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @POLLNVAL, align 4
  store i32 %12, i32* %2, align 4
  br label %23

13:                                               ; preds = %1
  %14 = load i32, i32* @POLLHUP, align 4
  %15 = load i32, i32* @POLLIN, align 4
  %16 = load i32, i32* @POLLRDNORM, align 4
  %17 = or i32 %15, %16
  %18 = load %struct.vop_poll_args*, %struct.vop_poll_args** %3, align 8
  %19 = getelementptr inbounds %struct.vop_poll_args, %struct.vop_poll_args* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %17, %20
  %22 = or i32 %14, %21
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %13, %11
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
